--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "activationEvents": [
     "d-struct:dub-build"
   ],
+  "activationCommands": {
+    "atom-workspace": "d-struct:build"
+  },
   "repository": "https://github.com/ysgard/d-struct",
   "license": "MIT",
   "readme": "# Support for the D language\nSyntax highlighting and dub integration.\n",
