--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "d-struct:dub-build"
   ],
   "activationCommands": {
-    "atom-workspace": "d-struct:build"
+    "atom-workspace": [
+      "d-struct:build",
+      "d-struct:run"
+    ]
   },
   "repository": "https://github.com/ysgard/d-struct",
   "license": "MIT",
